# wam

./: CMakeLists.txt  README.md  common.pri  component.properties  device.pri  oss-pkg-info.yaml  testplugin.pri  tests.pri  wam.pri  wam.pro  wamcorelib.pri  wamlib.pri  wamplugin.pri
src/: .clang-format  .clang-tidy  CMakeLists.txt  Main.cpp  wam_main.cc
src/agl/: RunWAMAGL.cpp  RunWAMAGL.h  WebAppFactoryAGL.cpp  WebAppFactoryAGL.h  WebAppFactoryManagerAGL.cpp  WebAppManagerServiceAGL.cpp  WebAppManagerServiceAGL.h  WebAppWaylandAGL.cpp  WebAppWaylandAGL.h  WebRuntimeAGL.cpp  WebRuntimeAGL.h
src/core/: ApplicationDescription.cpp  ApplicationDescription.h  CMakeLists.txt  ContainerAppManager.cpp  ContainerAppManager.h  DeviceInfo.cpp  DeviceInfo.h  DisplayId.h  PalmSystemBase.cpp  PalmSystemBase.h  PlatformModuleFactory.h  PlugInService.cpp  PlugInService.h  PluginInterface.h  PluginLibWrapper.cpp  PluginLibWrapper.h  PluginLoader.cpp  PluginLoader.h  ServiceSender.h  WebAppBase.cpp  WebAppBase.h  WebAppFactoryInterface.h  WebAppFactoryManager.cpp  WebAppFactoryManager.h  WebAppFactoryManagerImpl.cpp  WebAppFactoryManagerImpl.h  WebAppManager.cpp  WebAppManager.h  WebAppManagerConfig.cpp  WebAppManagerConfig.h  WebAppManagerService.cpp  WebAppManagerService.h  WebAppManagerTracer.h  WebPageBase.cpp  WebPageBase.h  WebPageObserver.cpp  WebPageObserver.h  WebProcessManager.cpp  WebProcessManager.h  WebRuntime.h  (+43 more)
src/core/trace/: CMakeLists.txt  pmtrace_webappmanager3_provider.h  web_app_manager_tracer_lib.cc  web_app_manager_tracer_lib.h
src/platform/: CMakeLists.txt  PalmSystemWebOS.cpp  PalmSystemWebOS.h  WebAppWayland.cpp  WebAppWayland.h  WebAppWaylandWindow.cpp  WebAppWaylandWindow.h  WebAppWindow.h  WebAppWindowFactory.h  WebAppWindowImpl.cpp  WebAppWindowImpl.h  notification_platform_bridge.cc  notification_platform_bridge.h  palm_system_webos.cc  palm_system_webos.h  permission_prompt.cc  permission_prompt.h  platform_factory.cc  platform_factory.h  web_app_wayland.cc  web_app_wayland.h  web_app_wayland_window.cc  web_app_wayland_window.h  web_app_window.h  web_app_window_factory.h  web_app_window_impl.cc  web_app_window_impl.h
src/platform/webengine/: BlinkWebProcessManager.cpp  BlinkWebProcessManager.h  BlinkWebView.cpp  BlinkWebView.h  BlinkWebViewProfileHelper.cpp  BlinkWebViewProfileHelper.h  PalmSystemBlink.cpp  PalmSystemBlink.h  WebPageBlink.cpp  WebPageBlink.h  WebPageBlinkDelegate.h  WebPageBlinkObserver.h  WebView.h  WebViewFactory.h  WebViewImpl.cpp  WebViewImpl.h  blink_web_process_manager.cc  blink_web_process_manager.h  blink_web_view.cc  blink_web_view.h  blink_web_view_profile_helper.cc  blink_web_view_profile_helper.h  palm_system_blink.cc  palm_system_blink.h  web_page_blink.cc  web_page_blink.h  web_page_blink_delegate.h  web_page_blink_observer.h  web_view.h  web_view_factory.h  web_view_impl.cc  web_view_impl.h
src/plugin/: CMakeLists.txt  WebAppFactoryLuna.cpp  WebAppFactoryLuna.h  WebAppFactoryManagerQtPlugin.cpp  WebAppWaylandWebOS.cpp  WebAppWaylandWebOS.h  web_app_factory_luna.cc  web_app_factory_luna.h  web_app_wayland_webos.cc  web_app_wayland_webos.h  webappfactoryluna-plugin.json
src/testplugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h  test_plugin.cc  test_plugin.h
src/tests/: ApplicationDescriptionUnitTest.cpp  BCP47Tests.cpp  CMakeLists.txt  ClearBrowsingDataComponentTest.cpp  CloseAllAppsComponentTest.cpp  DeviceInfoUnitTest.cpp  GetWebProcessSizeTest.cpp  JsonHelperUnitTest.cpp  KillAppTest.cpp  LaunchAppComponentTest.cpp  ListRunningAppsTest.cpp  LogControlComponentTest.cpp  NetworkStatusUnitTest.cpp  PalmSystemBlinkTests.cpp  PauseAppTest.cpp  PluginLoadTest.cpp  PluginLoaderUnitTest.cpp  SetInspectorEnableTest.cpp  StringUtilsUnitTest.cpp  TouchEventTest.cpp  UrlUnitTest.cpp  UtilsTests.cpp  WebAppManagerConfigUnitTest.cpp  WebPageBlinkUnitTest.cpp  WebProcessCreatedTest.cpp  application_description_test.cc  bcp47_test.cc  clear_browsing_data_test.cc  close_all_apps_test.cc  device_info_test.cc  error_page_test.cc  get_web_process_size_test.cc  json_helper_test.cc  kill_app_test.cc  launch_app_test.cc  list_running_apps_test.cc  log_control_test.cc  network_status_test.cc  palm_system_blink_test.cc  pause_app_test.cc  (+10 more)
src/tests/mocks/: BaseMockInitializer.h  BlinkWebProcessManagerMock.cpp  BlinkWebProcessManagerMock.h  PlatformModuleFactoryImplMock.cpp  PlatformModuleFactoryImplMock.h  PluginLibWrapperMock.h  WebAppBaseMock.h  WebAppFactoryInterfaceMock.h  WebAppManagerConfigMock.h  (+31 more)
src/util/: BCP47.cpp  BCP47.h  BaseCheck.h  JsonHelper.cpp  JsonHelper.h  LogManager.cpp  LogManager.h  LogManagerConsole.cpp  LogManagerConsole.h  LogManagerConsoleHelpers.h  LogManagerPmLog.cpp  LogManagerPmLog.h  LogMsgId.h  NetworkStatus.cpp  NetworkStatus.h  NetworkStatusManager.cpp  NetworkStatusManager.h  ObserverList.h  QtLessTemporaryHelpers.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h  TypeConverter.cpp  TypeConverter.h  Url.cpp  Url.h  Utils.cpp  Utils.h  WebAppManagerUtils.cpp  WebAppManagerUtils.h  base_check.h  bcp47.cc  bcp47.h  log_manager.cc  log_manager.h  log_manager_console.cc  log_manager_console.h  log_manager_console_helpers.h  log_manager_pmlog.cc  (+15 more)
src/webos/: DeviceInfoImpl.cpp  DeviceInfoImpl.h  PalmServiceBase.cpp  PalmServiceBase.h  PlatformModuleFactoryImpl.cpp  PlatformModuleFactoryImpl.h  PlugInServiceLuna.cpp  PlugInServiceLuna.h  ServiceSenderLuna.cpp  ServiceSenderLuna.h  WebAppManagerServiceLuna.cpp  WebAppManagerServiceLuna.h  WebAppManagerServiceLunaImpl.cpp  WebAppManagerServiceLunaImpl.h  WebRuntimeWebOS.cpp  WebRuntimeWebOS.h  device_info_impl.cc  device_info_impl.h  notification_service_luna.cc  notification_service_luna.h  palm_service_base.cc  palm_service_base.h  platform_module_factory_impl.cc  platform_module_factory_impl.h  plugin_service_luna.cc  plugin_service_luna.h  service_sender_luna.cc  service_sender_luna.h  web_app_luna.cc  web_app_luna.h  web_app_manager_service_luna.cc  web_app_manager_service_luna.h  web_app_manager_service_luna_impl.cc  web_app_manager_service_luna_impl.h
(+24 files in other folders)
